force-app/main/default/objects/Approval_Priority_Combination__mdt/Approval_Priority_Combination__mdt.object-meta.xml
<CustomObject>
    <description>Approval Priority Combination for Priority Check</description>
    <label>Approval Priority Combination</label>
    <pluralLabel>Approval Priority Combinations</pluralLabel>
</CustomObject>