force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Country_Check__c.field-meta.xml
<CustomField>
    <fullName>Country_Check__c</fullName>
    <description>Flag to check Country</description>
    <defaultValue>false</defaultValue>
    <label>Country Check</label>
    <type>Checkbox</type>
</CustomField>