force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Currency_Blank__c.field-meta.xml
<CustomField>
    <fullName>Currency_Blank__c</fullName>
    <description>Flag to check if Currency Blank</description>
    <defaultValue>false</defaultValue>
    <label>Currency Blank</label>
    <type>Checkbox</type>
</CustomField>