force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Currency_Check__c.field-meta.xml
<CustomField>
    <fullName>Currency_Check__c</fullName>
    <description>Flag to check currency</description>
    <defaultValue>false</defaultValue>
    <label>Currency Check</label>
    <type>Checkbox</type>
</CustomField>