force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Distribution_Channel_Blank__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Blank__c</fullName>
    <description>Flag to check if Distribution Channel Bank</description>
    <defaultValue>false</defaultValue>
    <label>Distribution Channel Blank</label>
    <type>Checkbox</type>
</CustomField>