force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Distribution_Channel_Check__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Check__c</fullName>
    <description>Flag to check Distribution Channel</description>
    <defaultValue>false</defaultValue>
    <label>Distribution Channel Check</label>
    <type>Checkbox</type>
</CustomField>