force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Price_List_Type_Blank__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if Price List Type Blank</description>
    <label>Price List Type Blank</label>
    <type>Checkbox</type>
</CustomField>