force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Price_List_Type_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if Price List Type Check</description>
    <label>Price List Type Check</label>
    <type>Checkbox</type>
</CustomField>