force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Region_Blank__c.field-meta.xml
<CustomField>
    <fullName>Region_Blank__c</fullName>
    <description>Flag to check if Region Blank</description>
    <defaultValue>false</defaultValue>
    <label>Region Blank</label>
    <type>Checkbox</type>
</CustomField>