force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Region_Check__c.field-meta.xml
<CustomField>
    <fullName>Region_Check__c</fullName>
    <description>Flag to check Region</description>
    <defaultValue>false</defaultValue>
    <label>Region Check</label>
    <type>Checkbox</type>
</CustomField>