force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Sales_Org_Blank__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Blank__c</fullName>
    <description>Flag to check if Sales Org Blank</description>
    <defaultValue>false</defaultValue>
    <label>Sales Org Blank</label>
    <type>Checkbox</type>
</CustomField>