force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Sales_Org_Check__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Check__c</fullName>
    <description>Flag to check Sales Org</description>
    <defaultValue>false</defaultValue>
    <label>Sales Org Check</label>
    <type>Checkbox</type>
</CustomField>