force-app/main/default/objects/Approval_Priority_Combination__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Stores priority value</description>
    <label>Value</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>